Remove admin service rpc
